docker/dev/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /
                          route:
                            timeout: 60s
                            cluster: service
                http_filters:
                  - name: envoy.router
                    config: {}
  clusters:
    - name: service
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      #http2_protocol_options: {}
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
